<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/animals"
            android:onClick="sendMessege"
            android:text="@string/animal"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/food"
            android:onClick="sendMessege"
            android:text="@string/food"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/bank"
            android:onClick="sendMessege"
            android:text="@string/bank"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_clothes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/clothes"

            android:onClick="sendMessege"
            android:text="@string/clothes"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_gym"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/gym"
            android:onClick="sendMessege"
            android:text="@string/gym"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_entertainment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/entertainment"
            android:onClick="sendMessege"
            android:text="@string/entertainment"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/phone"
            android:onClick="sendMessege"
            android:text="@string/phone"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/rent"
            android:onClick="sendMessege"
            android:text="@string/rent"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/travel"
            android:onClick="sendMessege"
            android:text="@string/travel"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/others1"
            android:onClick="sendMessege"
            android:text="@string/other"
            android:textAlignment="textStart"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>