<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <Button
            android:id="@+id/button_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/salary"
            android:onClick="sendMessage"
            android:text="@string/salary"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_gift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/gift"
            android:onClick="sendMessage"
            android:text="@string/gift"
            android:textAlignment="textStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/button_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawableLeft="@drawable/others1"
            android:onClick="sendMessage"
            android:text="@string/other"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textStyle="italic" />


    </LinearLayout>
</ScrollView>